changes in fonts

--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         *{
-            font-family: "gilroy";
+           @font-face {
+            font-family: gilroy;
+            src: url(./gilroy);
+           }
         }
     </style>
 </head>
