--- a/index.html
+++ b/index.html
@@ -81,7 +81,9 @@
             <div class="right h-full w-full lg:w-[50%] bg-white">
                 <div class="text flex flex-col items-center justify-center gap-5 mt-[15vh] ">
                     <h1 class="font-semibold text-4xl lg:text-5xl uppercase ">about</h1>
-                    <div class="line w-[70px] h-[4px] bg-black"></div>
+                    <div class="line w-[70px] h-[4px] bg-black lg:mb-[10vh]"></div>
+                    <h3 class="text-center font-medium lg:text-xl lg:w-[40vw]">
+                        Holistic health is an approach to healthcare that considers the whole person—body, mind, spirit, and emotions—in the pursuit of optimal health and wellness. It emphasizes the interconnectedness of these aspects and seeks to address imbalances or disharmonies that may arise within them.Holistic health practitioners may include naturopathic doctors, integrative medicine physicians, holistic nurses, chiropractors, acupuncturists, nutritionists, and various types of therapists (such as massage therapists, psychotherapists, and energy healers).</h3>
                     </div>
             </div>
         </div>
